# Keymappings__Engine

./: COCK&BALLSTORTURE.XYZ  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
docs/: keymappings_loop.mmd
src/keymappings/: chord.py  config.py  converters.py  debug.py  key.py  keymapping.py  keymappings_loop.py  main.py  sequence.py  user_layer.py
tests/: test_keymappings.py
