[metadata]
name = keymappings
description = Advanced keymappings creation
author = DeadlySquad13
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8.5

[options]
packages =
    keymappings
install_requires =
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
keymappings = py.typed

[flake8]
max-line-length = 80
